--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0"
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^23.6.0",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
     "lodash.set": "^4.3.2"
