--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "library",
     "mock"
   ],
+  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dan-kushnaryov/google-apps-script-services.git"
@@ -27,16 +28,17 @@
     "collectCoverage": true
   },
   "devDependencies": {
+    "@types/google-apps-script": "^1.0.14",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-standard": "^12.0.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^23.6.0",
     "prettier": "^2.0.5"
   },
